add controllers and model
